MFC r269777: Fix string length argument passed to "sysctl_handle_string()" so that the complete string is returned by the function and not just only one byte.

PR:	192544

Former-commit-id: d3957a8f3445e72602260026367b19bb30003184